# NotesService

./: .gitignore  CMakeLists.txt  README.md  main.cpp  temp.txt
CreateTools/: CMakeLists.txt  Cursor.h  Fixed.h  Grid.cpp  Grid.h  Objects.h  spaces.h
CreateWindow/: CMakeLists.txt  CreateWindow.cpp  CreateWindow.h
Grid/: Grid.h  Objects.h
MainWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
UserInput/: CMakeLists.txt  MouseEvents.cpp  MouseEvents.h
ViewWindow/: CMakeLists.txt  ViewWindow.cpp  ViewWindow.h
img/: crop.py  main.py  sizes.py
notes/: ASMR.txt  Hero.txt  Max - my dog.txt  Pipiska  Shoplist.txt  whas it really.txt
styles/: buttons.css  cursor.css  window.css
